 2004-12-14  Angus Leeming  <leeming@lyx.org>
 
	* os.h, os_os2.C, os_unix.C, os_win32.C:
	(binpath, binname, getTmpDir): return a const reference rather than
	a copy of the data.
	(homepath, nulldev): new functions returning the name of "HOME" and
	the null device, respectively.

	* filetools.C: (ExpandPath, MakeDisplayPath): use os::homepath(), not
	GetEnvPath("HOME").

2004-12-14  Angus Leeming  <leeming@lyx.org>

	* os.h, os_{os2,unix,win32}.C (init): change interface to no longer
	pass the addresses of the parameters received by main.

2004-12-14  Angus Leeming  <leeming@lyx.org>

	* copy.C (copy): open the ifstream with ios::binary.

2004-12-14  Angus Leeming  <leeming@lyx.org>

	* os.C: Add _WIN32 to the #define.
 
	* systemcall.C (startscript): remove trailing '/n' from request to
	start the command in a minimized window under DOS.

2004-12-14  Angus Leeming  <leeming@lyx.org>

	* Makefile.am (INCLUDES): Remove trailing slash from -Ifoo/
	to overcome bug in the MinGW port of g++ 3.4.2.

2004-12-07  Angus Leeming  <leeming@lyx.org>

	* *.[Ch]: remove all traces of #pragma interface/implementation

2004-06-29  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* filetools.C (i18nLibFileSearch): honor case where LANGUAGE
	specifies a list of locales (thanks to Pablo Saraxtaga for the
	initial patch).

2004-04-01  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* filetools.C (DeleteAllFilesInDir): delete directories with
	rmdir(), unlink() does not work

2004-03-24  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* filetools.C (i18nLibFileSearch): simplify the logic a bit

2004-03-23  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* filetools.C (i18nLibFileSearch): fix the logic to match closely
	what gettext does

2003-04-09  John Levon  <levon@movementarian.org>

	* filetools.C: fix MakeDisplayPath() to not lie

2003-02-17  John Levon  <levon@movementarian.org>

	* forkedcall.h:
	* forkedcall.C: add running()

2003-03-06  Alfredo Braunstein <abraunst@libero.it>
